Fixed offer pop-up not showing

--- a/css/offerPopup.css
+++ b/css/offerPopup.css
@@ -9,7 +9,7 @@
 
 #offerPopup
 {
-    display: block;
+    display: none;
     left: 35%;
     position: fixed;
     z-index: 2; 
